--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ chardet==3.0.4
 defusedxml==0.6.0
 Django==2.2.8
 django-allauth==0.41.0
+django-countries==6.1
+django-crispy-forms==1.9.0
 idna==2.9
 oauthlib==3.1.0
 pep8==1.7.1
